JumpScript/tests/baselines/reference/outModuleConcatUnspecifiedModuleKind.errors.txt
tests/cases/compiler/a.jump(1,14): error TS6131: Cannot compile modules using option 'outFile' unless the '--module' flag is 'amd' or 'system'.


==== tests/cases/compiler/a.jump (1 errors) ====
    export class A { } // module
                 ~
!!! error TS6131: Cannot compile modules using option 'outFile' unless the '--module' flag is 'amd' or 'system'.
    
==== tests/cases/compiler/b.jump (0 errors) ====
    var x = 0; // global